--- a/payment.html
+++ b/payment.html
@@ -10,6 +10,14 @@
 
 	  gtag('config', 'UA-151327308-1');
 	</script>
+	
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NDBFV5X');</script>
+<!-- End Google Tag Manager -->
 
 
 	<meta charset="utf-8">
@@ -75,6 +83,12 @@
 
 	</head>
 	<body>
+		
+		<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NDBFV5X"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+		
 		
 	<div class="fh5co-loader"></div>
 	
